# alphaswarm

./: .env.example  .gitignore  CONTRIBUTING.md  FIRECRAWL.md  Makefile  README.md  pyproject.toml
.github/workflows/: python.yaml
alphaswarm/: config.py
alphaswarm/agent/: agent.py  agent_client.py
alphaswarm/chains/: sol.py
alphaswarm/core/: token.py
alphaswarm/strategy/: schema.py
alphaswarm/tools/: __init__.py  get_token_address.py  price_tool.py  strategy_analysis_tool.py
alphaswarm/utils/: __init__.py  file_utils.py  type_description.py  utils.py
config/: default.yaml  reference_custom_code_agent_system_prompt.txt  reference_strategy_config.yaml  strategy_config.yaml  trading_strategy_agent_system_prompt.txt  viral_coin_agent.yaml
docs/: architecture.md  services.md  tools.md
examples/: README.md  basic_example_01_quote.py  basic_example_02_swap.py  basic_example_03_strategy.py  cron.py  telegram_bot.py  terminal.py
examples/agents/: basic_price_momentum_cron.py  portfolio_price_momentum_cron.py  price_change_observer.py  price_forecaster.py  price_momentum_portfolio_cron.py
examples/basic/: 01_quote.py  02_swap.py  03_strategy.py
examples/interaction/: cron.py  cron_observer.py  telegram_bot.py  terminal.py
examples/viral_coin/: README.md  viral_coin_agent_cli.py  viral_coin_agent_cron.py  viral_coin_agent_telegram.py
forecasting/notebooks/: autogluon_baselines.ipynb  autogluon_llm.ipynb  krisi_eval.ipynb
lab/: research_agent_system_prompt.txt
lab/forecasting_agent/: alchemy_context_tool.py  create_image_tool.py  (+3 more)
tests/: __init__.py
(+149 files in other folders)
