[project]
name = "alphaswarm"
version = "0.1.0"
description = ""
authors = [
    {name = "Guillaume Koch",email = "guillaumekoch@chainml.net"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "black",
    "pytest"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
